packages/frosted-ui/src/components/drawer.css
.fui-DrawerContent {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 1;

  display: flex;
  flex-direction: column;

  /* width: 380px;
  max-width: 100%; */

  box-sizing: border-box;
  background-color: var(--color-panel-solid);
}

.fui-DrawerContent::before {
  content: '';
  position: absolute;
  inset: 0;
  z-index: -1;
  box-shadow: var(--shadow-5);
}

.fui-DrawerHeader {
  flex-shrink: 0;
  --inset-padding: var(--drawer-content-padding);
  padding: var(--inset-padding);
}
.fui-BodyScrollArea {
  flex-shrink: 0;
  flex: 1;
  overflow-y: auto;
  -webkit-box-flex: 1;
  flex-grow: 1;
}

.fui-BodyScrollArea:has([data-is-scrollable='true']) {
  border-bottom: 1px solid var(--gray-6);
  border-top: 1px solid var(--gray-6);
}

.fui-DrawerBody {
  --inset-padding: var(--drawer-content-padding);
  padding: var(--inset-padding);
}

.fui-DrawerStickyFooter {
  flex-shrink: 0;
  --inset-padding: var(--drawer-content-padding);
  padding: var(--inset-padding);
}

/***************************************************************************************************
 *                                                                                                 *
 * SIZES                                                                                           *
 *                                                                                                 *
 ***************************************************************************************************/

@breakpoints {
  .fui-DrawerContent {
    &:where(.fui-r-size-1) {
      --drawer-content-padding: var(--space-3);
    }
    &:where(.fui-r-size-2) {
      --drawer-content-padding: var(--space-4);
    }
    &:where(.fui-r-size-3) {
      --drawer-content-padding: var(--space-5);
    }
    &:where(.fui-r-size-4) {
      --drawer-content-padding: var(--space-6);
    }
  }
}

@media (prefers-reduced-motion: no-preference) {
  @keyframes fui-drawer-content-show {
    from {
      transform: translateX(100%);
    }
    to {
      transform: translateX(0%);
    }
  }

  @keyframes fui-drawer-content-hide {
    from {
      transform: translateX(0%);
    }
    to {
      transform: translateX(100%);
    }
  }

  @keyframes fui-drawer-backdrop-show {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }

  @keyframes fui-drawer-backdrop-hide {
    from {
      opacity: 1;
    }
    to {
      opacity: 0;
    }
  }

  .fui-DrawerContent {
    &:where([data-state='open']) {
      animation: fui-drawer-content-show 400ms cubic-bezier(0.16, 1, 0.3, 1);
    }

    &:where([data-state='closed']) {
      animation: fui-drawer-content-hide 300ms cubic-bezier(0.16, 1, 0.3, 1);
    }

    &:where([data-state='open'])::before {
      animation: fui-drawer-backdrop-show 400ms cubic-bezier(0.16, 1, 0.3, 1);
    }

    &:where([data-state='closed'])::before {
      animation: fui-drawer-backdrop-hide 300ms cubic-bezier(0.16, 1, 0.3, 1);
    }
  }
}

